# -*- coding: utf-8 -*-

2009-03-26  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package_task.rb:  Import from Rake's
	  rake/gempackagetask.rb
	* Rakefile:  Switched to RDoc::Task from RDoc 2.4.2.

2009-03-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/install_command.rb:  Fix typo.  Patch #24446
	  by Luis Parravicini.
	* lib/rubygems/version.rb:  Handle non-String versions by calling
	  #to_s.  Patch #24392 by Stephen Bannasch.

2009-03-22  Daniel Berger <djberg96@gmail.com>

   * lib/rubygems/remote_fetcher.rb: Always escape URI's to deal with spaces
     and such, regardless of platform.
   * lib/rubygesm/validator.rb: Use the test-unit gem if installed.
     Part of the fix for RF #24261
   * lib/rubygems/commands/install_command.rb: Explictly require
     rubygems/uninstaller.rb if the user wants to bail because of failed
     tests.
     Part of the fix for RF #24261

2009-03-17  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/query_command.rb:  Make `gem unpack` work with
	  more than one gem name, fix warning about installation location.

2009-03-16  James Tucker <jftucker@gmail.com>

	* lib/rubygems.rb: Deprecate ConfigMap[:RUBY_INSTALL_NAME]
	* lib/rubygems/defaults.rb: Gem.default_exec_format to use 
		ConfigMap[:ruby_install_name].
		Fixes Bug #24457
	* util/gem_prelude.rb.template: Fix potential bug in
	  Gem.default_exec_format when ConfigMap[:BASERUBY] is not 'ruby'.

2009-03-14  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/installer.rb: Cleanup quotes on Windows stub scripts.
	  Fixes Bug #24039.
	* lib/rubygems/commands/setup_command.rb: ditto.

2008-03-13  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/uninstall_command.rb:  Add --user-install to
	  allow uninstallation from ~/.gem.  Bug #23760 by Roger Pack.
	* lib/rubygems/uninstaller.rb:  Automatically uninstall from
	  Gem.user_dir.
	* lib/rubygems/commands/update_command.rb:  Rescue InstallError