@@ -5,6 +5,14 @@
 	* lib/rubygems/package_task.rb:  Import from Rake's
 	  rake/gempackagetask.rb
 	* Rakefile:  Switched to RDoc::Task from RDoc 2.4.2.
+	* lib/rubygems.rb:  Gem.find_files now returns paths in $LOAD_PATH.
+	* lib/rubygems/command_manager.rb:  RubyGems now loads commands
+	  external to RubyGems via rubygems/discover_command.rb.  See
+	  Gem::CommandManager for details.
+	* lib/rubygems/discover_install_hooks.rb:  RubyGems now loads
+	  install/uninstall hooks external to Rubygems via
+	  rubygems/discover_install.rb.  See Gem::Installer and
+	  Gem::Uninstaller for details.
 
 2009-03-25  Eric Hodel  <drbrain@segment7.net>
 
